--- a/templates/index.html
+++ b/templates/index.html
@@ -4,28 +4,92 @@
     <title>Video Processing App</title>
     <link rel="stylesheet" href="../static/style.css">
     <!-- 链接外部 CSS 文件 -->
+    <link rel="icon" href="../static/favicon.ico" type="image/x-icon">
+
+
 </head>
 <body>
 
-    <h1>上传视频</h1>
+    <h1>为视频制作你的个性化文案</h1>
     <!-- h1 标签定义一个大标题 -->
-    
-    <select name="userOption1" id="optionSelect1" onchange="updateOptionTitle()">
-        <option value="相声风格" title="传统中国喜剧，通常由两位表演者进行快速、机智的对话。例句: '甲：我有一种摄影式的记忆力。乙：真的吗？甲：对，但是胶卷用完了。'">相声风格</option>
-        <option value="小品风格" title="中国特有的短剧形式，侧重于生活幽默和日常趣事。例句: '你看这电视远程控制器，有时候不按它它动，按它它不动。'">小品风格</option>
-        <option value="网络短视频风格" title="适应网络时代的幽默风格，快节奏、接地气。例句: '今天试着做了健康餐，结果连狗狗都嫌弃我。'">网络短视频风格</option>
-        <option value="校园笑话风格" title="以校园生活为背景的幽默，贴近学生日常。例句: '数学老师的爱情，总是从分数开始。'">校园笑话风格</option>
-        <option value="白领幽默风格" title="针对办公室和白领生活的幽默。例句: '加班就像洗发水，日日重复，周周相似。'">白领幽默风格</option>
-        <option value="家庭生活幽默风格" title="描述家庭日常的幽默，温馨又好笑。例句: '妈妈的厨艺好得连厨房的烟雾报警器都拍手叫好。'">家庭生活幽默风格</option>
-        <option value="方言幽默风格" title="利用方言特色制造的幽默，地域特色浓厚。例句: '东北话说‘你瞅啥’，是多功能语句，可以表达99%的情绪。'">方言幽默风格</option>
-        <option value="宠物幽默风格" title="以宠物为主角的幽默，萌趣横生。例句: '我家的猫是个哲学家，总喜欢在猫砂上深思。'">宠物幽默风格</option>
-        <option value="老司机幽默风格" title="网络流行语‘老司机’的幽默风格，意味深长且风趣。例句: '老司机开车，不仅仅是手艺，更是一种态度。'">老司机幽默风格</option>
-    </select>
-    
-    
-    
+    <div><h2>风格选择</h2>
+
+        <div><h3>幽默搞笑</h3>
+            <select name="userOption1" id="optionSelect1" onchange="updateOptionTitle()">
+                <option value="">None</option>
+                <option value="相声风格" title="传统中国喜剧，通常由两位表演者进行快速、机智的对话。例句: '甲：我有一种摄影式的记忆力。乙：真的吗？甲：对，但是胶卷用完了。'">相声风格</option>
+                <option value="小品风格" title="中国特有的短剧形式，侧重于生活幽默和日常趣事。例句: '你看这电视远程控制器，有时候不按它它动，按它它不动。'">小品风格</option>
+                <option value="网络短视频风格" title="适应网络时代的幽默风格，快节奏、接地气。例句: '今天试着做了健康餐，结果连狗狗都嫌弃我。'">网络短视频风格</option>
+                <option value="校园笑话风格" title="以校园生活为背景的幽默，贴近学生日常。例句: '数学老师的爱情，总是从分数开始。'">校园笑话风格</option>
+                <option value="白领幽默风格" title="针对办公室和白领生活的幽默。例句: '加班就像洗发水，日日重复，周周相似。'">白领幽默风格</option>
+                <option value="家庭生活幽默风格" title="描述家庭日常的幽默，温馨又好笑。例句: '妈妈的厨艺好得连厨房的烟雾报警器都拍手叫好。'">家庭生活幽默风格</option>
+                <option value="方言幽默风格" title="利用方言特色制造的幽默，地域特色浓厚。例句: '东北话说‘你瞅啥’，是多功能语句，可以表达99%的情绪。'">方言幽默风格</option>
+                <option value="宠物幽默风格" title="以宠物为主角的幽默，萌趣横生。例句: '我家的猫是个哲学家，总喜欢在猫砂上深思。'">宠物幽默风格</option>
+                <option value="老司机幽默风格" title="网络流行语‘老司机’的幽默风格，意味深长且风趣。例句: '老司机开车，不仅仅是手艺，更是一种态度。'">老司机幽默风格</option>
+            </select> 
+        </div>
 
 
+        <div><h3>动物与自然</h3>
+            <select name="userOption2" id="optionSelect2" onchange="updateOptionTitle()">
+                <option value="">None</option>
+                <option value="BBC自然纪录片风格" title="在马达加斯加青翠的丛林中，狐猴用它长而灵巧的手指灵巧地在树冠上导航，这是在这个竞争激烈的生态系统中生存的关键适应。">BBC自然纪录片风格</option>
+                <option value="国家地理探险家风格" title="雄伟的西伯利亚虎，是同类中最大的，在俄罗斯东部的茂密森林中漫游，它的皮毛是伪装的杰作，以无与伦比的隐身能力帮助它跟踪猎物。">国家地理探险家风格</option>
+                <option value="大卫爱登堡的耳语奇迹风格" title="见证非洲象群的战略智慧，因为它们协调行动，以保护年轻人免受潜伏的捕食者，展示复杂的社会结构和沟通。">大卫爱登堡的耳语奇迹风格</option>
+                <option value="动物星球冒险风格" title="观察大白色鲨鱼非凡的狩猎技术，它强大的尾巴推动它在水中以每小时35英里的速度前进，使它成为海洋中最可怕的捕食者之一。">动物星球冒险风格</option>
+                <option value="IMAX史诗影院风格" title="在大堡礁，小丑鱼与海葵表现出一种独特的共生关系，用食物残渣来换取捕食者的保护，这是互利共生的一个很好的例子。">IMAX史诗影院风格</option>
+                <option value="水下装饰风格" title="这种难以捉摸的巨型乌贼生活在海洋深处，它的触角延伸到令人印象深刻的43英尺，使其成为海洋中最神秘和鲜为人知的巨人之一。">水下装饰风格</option>
+                <option value="Survival in the Wild Style" title="在北极苔原，北极熊有两层皮毛和一层厚厚的脂肪，展示了在零度以下生存的显著适应性。">Survival in the Wild Style</option>
+                <option value="神秘丛林风格" title="亚马逊雨林的箭毒蛙拥有鲜艳的颜色，这是致命毒素的警告信号，是数千年来进化的防御机制。">神秘丛林风格</option>
+                <option value="Secrets of the Desert" title="撒哈拉沙漠的耳廓狐，有着超大的耳朵，可以散热并在地下找到猎物，这是对恶劣环境的一种显著适应。">Secrets of the Desert</option>
+                <option value="冰雪荒原风格" title="在南极，帝企鹅忍受着地球上最严酷的冬天，在它的脚上孵化蛋，依偎在它的育儿袋里，证明了父母的奉献精神。">冰雪荒原风格</option>
+                <option value="海岛天堂风格" title="在加拉帕戈斯群岛上，海鬣蜥进化出了在海里觅食的独特能力，这是现代蜥蜴中一种非凡的适应能力。">海岛天堂风格</option>
+                <option value="山峰风格" title="安第斯神鹰的翼展可达10英尺，它乘着上升的热气流，在扫描山脉寻找腐肉的同时保存能量。">山峰风格</option>
+                <option value="深海探险风格" title="在漆黑的海洋深处，生物发光的琵琶鱼用发光的附属物引诱猎物，这是进化聪明才智的一个迷人的例子。">深海探险风格</option>
+                <option value="非洲萨凡纳风格" title="猎豹是世界上最快的陆地动物，从0加速到60英里每小时只需3秒，它的身体是狩猎空气动力学效率的典范。">非洲萨凡纳风格</option>
+                <option value="河之旅风格" title="亚马逊河的粉红色河海豚使用复杂的回声定位在黑暗的沃茨中导航和狩猎，这是对沉积物丰富的环境的适应。">河之旅风格</option>
+                <option value="城市野生动物风格" title="游隼是世界上跑得最快的鸟类，它们已经适应了城市生活，在摩天大楼上筑巢，捕食城市里的鸽子。">城市野生动物风格</option>
+                <option value="北极圈风格" title="北极狐随着季节的变化而改变皮毛的颜色，在极端的极地气候中表现出明显的伪装和隔热适应能力。">北极圈风格</option>
+                <option value="微观世界风格" title="在一滴池塘水中，微观的水熊虫，也被称为水熊，表现出非凡的适应力，能够在极端温度甚至太空真空中生存。">微观世界风格</option>
+                <option value="雄伟森林风格" title="在北美的温带森林中，海狸扮演着生态系统工程师的角色，它的水坝建设活动创造了湿地，">雄伟森林风格</option>
+            </select>
+        </div>
+        <div><h3>军事频道</h3>
+            <select name="userOption3" id="optionSelect3" onchange="handleOnChange(this)">
+                <option value="">None</option>
+                <option value= "飞机解说" title=" F-35 Lightning II于2015年推出，是洛克希德·马丁公司的飞机。另一方面，2005年推出的F-22猛禽是洛克希德·马丁航空公司和波音国防，太空与安全公司之间的联合项目。F-22的大部分机身和武器系统都是由洛克希德·马丁航空公司开发的，而波音公司则为机翼的开发以及航空电子设备和训练系统的集成做出了贡献。F-22猛禽的开发始于1991年，当时美国空军宣布洛克希德公司和普惠公司为先进战术战斗机（ATF）计划的获胜者。F-22猛禽是专为美国空军开发的双引擎隐形战术战斗机。它最初设计为空中优势战斗机，还具有电子战、信号拦截和对地攻击的能力。F-22是第五代空中优势飞机，在单一平台上结合了超机动性、超级巡航、隐身和传感器融合。现在，让我们比较一下 F-22 猛禽和 F-35 闪电 II：大小： F-22猛禽：F-22是一种更大的飞机，反映了其作为空中优势战斗机的作用。它的长度约为 62 英尺（18.9 米），翼展为 44.5 英尺（13.6 米），高度为 16.7 英尺（5.1 米）。较大的尺寸有助于其扩展的航程和有效载荷能力，特别是对于空对空任务。F-35闪电II：F-35体积较小，专为各种角色而设计，包括在较短的跑道和航空母舰上作战（在F-35B STOVL变体的情况下）。它的长度约为 51 英尺（15.7 米），翼展为 35 英尺（10.7 米），高度为 14 英尺（4.38 米）。较小的尺寸增强了其多功能性和部署灵活性。成本：F-22猛禽：F-22是有史以来最昂贵的战斗机之一。2012年，每架飞机的成本（包括开发费用）估计约为3.34亿美元。高成本是由于其先进的隐身能力、先进的航空电子设备以及在其结构中使用昂贵的材料。F-35闪电II：F-35的成本因变体而异。截至 2021 年，传统的起降变体 F-35A 每架飞机的成本约为 7800 万美元。F-35B（STOVL变体）和F-35C（航母变体）由于其附加功能而更昂贵。F-35计划旨在通过规模经济和国际合作来降低成本。飞机电子套件：F-22具有先进的飞机电子设备，专为空中优势和态势感知量身定制。它包括为空中优势定制的雷达、传感器融合和电子战系统。另一方面，F-35拥有更多样化的飞机电子套件，专为多角色能力而设计，包括空对地任务和侦察。飞控系统：F-22采用先进的飞行控制系统，具有高机动性和敏捷性，特别是在空对空作战中。F-35还拥有先进的飞行控制系统，但针对更广泛的操作进行了优化，包括F-35B变体的STOVL（短距起飞和垂直着陆）能力。发动机：F-22由两台普惠F119发动机提供动力，有助于其高速和推重比。F-35依靠一台普惠F135发动机，为各种任务提供动力和效率的平衡。武器系统：F-22的武器系统针对空中优势进行了优化，专注于超视距导弹和近战武器。F-35拥有更通用的武器系统，支持各种空对空和空对地弹药，包括更大的内部炸弹。防御系统：两架飞机都配备了最先进的防御系统，包括雷达预警接收器、导弹预警系统以及针对敌方雷达和红外制导威胁的对策。驾驶舱系统：F-22驾驶舱专为高态势感知而设计，主要用于空战，具有平视显示器和多功能显示器。F-35的驾驶舱更先进，具有大型全景触摸屏显示器和头盔式显示系统，可提供前所未有的态势感知能力。燃油系统：两架飞机都具有先进的燃油系统，可以执行远程任务。然而，F-35 可以使用探头和吊杆系统以及吊杆系统在半空中加油，而 F-22 同时使用探头和吊杆以及吊杆和插座系统。 隐身功能：F-22 的雷达截面 （RCS） 低于 F-35，这使得敌方雷达更难探测到。F-35的隐身性针对更广泛的任务进行了优化，包括对地攻击。 维护和诊断：虽然F-22非常先进，但其较旧的技术和设计使其维护更加密集。F-35 设计有更现代化的维护和诊断系统，使其更易于维修和维护。 数据链路和网络集成：F-35 擅长与其他平台和系统联网，作为更广泛的战场网络的一部分。F-22还具有先进的数据链能力，但F-35的系统更先进，有助于与盟国进行更大的信息共享和协调。 先进材料与结构：两架飞机都广泛使用包括复合材料在内的先进材料来减轻重量并增强隐身性。然而，F-35融合了材料和制造技术的最新进展。 光电瞄准系统：F-35具有先进的光电瞄准系统（EOTS），可提供远程探测和精确瞄准。F-22缺乏内部EOTS，依靠传统的雷达和外部瞄准吊舱执行对地攻击任务。 制导武器能力：两架飞机都可以使用一系列精确制导武器。F-35拥有先进的传感器和航空电子设备，擅长将这些武器用于空对空和空对地作战。">飞机解说</option>
+                <option value= "坦克解说" title="M1艾布拉姆斯主战坦克，也被称为M1艾布拉姆斯，起源于20世纪70年代，作为M60巴顿坦克的替代品。主战坦克的发展始于MBT-70（1970年主战坦克）项目，这是美国和西德德国之间的合作努力，旨在创造一种比M60更具可拆卸性和成本效益的车辆。然而，MBT-70项目超出了预算，西德德国退出了该项目。在美国，必须说服国会以更便宜和简化的形式继续该项目，从而产生了XM 803原型。即使是XM 803也被证明过于昂贵，导致国会取消了该项目。随着M60在现代战场上的需求越来越过时，国会于1973年6月启动了XM 1坦克计划。合同被授予克莱斯勒公司和通用汽车公司设计原型的XM 1。克莱斯勒的设计在1976年被选为进一步发展，导致创建的M1艾布拉姆斯，命名为荣誉将军。该坦克于1980年开始服役，从1982年开始由通用动力陆地系统公司制造，此前克莱斯勒被要求出售其军事部门。M1艾布拉姆斯的机组人员包括指挥官，炮手，装载机和驾驶员。最初配备105毫米火炮，后来的版本如M1 A1和M1 A2配备了120毫米滑膛炮，能够发射各种子弹，包括萨博和高爆反坦克子弹。坦克的炮塔配备了先进的设备，包括激光测距仪，弹道计算机，炮手热成像日夜瞄准镜，枪口参考传感器和风传感器。炮手的座位是稳定的，以确保准确的目标，即使坦克遇到崎岖的地形。辅助武器包括两挺M240机枪，一挺同轴安装在炮塔内，另一挺安装在装弹机舱门前。一挺.50口径机枪也安装在指挥官舱门前。艾布拉姆斯坦克由特殊的复合装甲保护，其中包括间隔的陶瓷装甲砖，在M1 A1的情况下，贫化铀夹在两张钢板之间。坦克装甲的许多细节仍然保密，以保护乘员的安全和生存能力。在坦克内部，弹药储存在装甲隔室中，以防止在爆炸时对乘员造成伤害，空气过滤系统可以防止化学或生物攻击。该坦克外形低矮，由燃气涡轮机发动机（AGT-1500）提供动力，具有高机动性。它可以实现高达42英里每小时（72公里每小时）的公路和30英里每小时（48公里每小时）的越野速度。在1991年的沙漠风暴行动中，M1艾布拉姆斯展示了它的能力，美国军方部署了2,000辆M1 A1艾布拉姆斯坦克。这些坦克在摧毁2,600辆伊拉克装甲车中发挥了关键作用，没有一辆艾布拉姆斯坦克被敌军摧毁。任何被摧毁的艾布拉姆斯坦克要么是由于友军炮火，要么是美军故意损坏，以防止捕获。M1艾布拉姆斯坦克继续在美国军队服役，并将看到未来的版本，如M1 A3。">坦克解说</option>
+                <option value="航母解说" title="作为世界上最大的航空母舰在世界上占主导地位的海军，杰拉尔德R。福特是个庞然大物。这艘航空母舰花了八年时间建造，又花了几年时间进行测试，它足够大，可以俯瞰许多大城镇中最大的建筑。杰拉尔德福特号以美国第38任总统的名字命名，是美国海军的主力舰。它的长度超过1,000英尺，几乎相当于三个美式足球场，高近250英尺。在这个巨大的空间中，航空母舰也有高达25层甲板。这艘巨大的船可以容纳4,500多人，搭载75架飞机，由两个核反应堆提供动力，满载重量超过10万吨。这使它成为有史以来建造的最大的战舰。据估计，整个建筑成本超过170亿美元，其中仅研究费用就达50亿美元。经过几次拖延，它比预期预算高出22%。建造始于2009年，并于2017年底完工并最终交付给海军，此前该船由唐纳德特朗普正式委托。杰拉尔德福特本人在建造期间去世，所以虽然命名已经到位，福特从来没有能够看到成品。当然，这艘船的主要目的是为这75架飞机提供一个发射基地。里面是一个巨大的机库，飞机在不在甲板上或执行任务时存放在那里。机库内还有一系列武器，以及几个大型升降机，旨在将武器从存储位置转移到准备武装的飞机上。你可能对军用飞机从航空母舰上起飞和降落的紧张视频很熟悉。杰拉尔德R福特的甲板是为这些大胆的飞行员提供的最长的甲板，但他们仍然必须在不到1,100英尺的甲板上发射和降落他们的喷气式飞机，所有这些都有严重的悬垂下降到海洋中。这些飞机是从一个“泡泡”控制的--更正式地说是一个集成的弹射控制系统--通过这个系统，军官们可以设置高节奏的弹射辅助起飞。在塔内，功能强大的计算机协助安排甲板上的飞机。技术的进步意味着，与杰拉尔德福特号之前的“尼米兹”型战舰相比，每天可以多发射25%的飞机，而船员则减少25%。从长远来看，希望减少所需的船员人数将有助于抵消新船的高成本。福特的电磁发射系统也比之前的蒸汽动力弹射器重量更轻，占用空间更小，需要的维护更少。减少的应变预计将有利于飞机本身，技术调整将意味着更多不同类型的飞机可以发射。这项技术确实造成了一些建设延误，并继续造成问题，但海军军官滔滔不绝。“她确实是一个技术奇迹，”海军作战部长乔纳森·格林纳特上将说。“她将携带无人驾驶飞机，联合打击战斗机，她将部署激光。一旦飞机降落，有40多个不同的加油站，以帮助他们回到甲板上。官员们仍然可以使用旧的做事方式。一个“显灵板”模型在福特号上，水手们收集包括总统在内的著名游客在货币上的签名，并将这些签名保存在他们的显灵板上。在甲板的一侧，提供了降落伞，用于卸载任何可能“误射”的武器，这是60年代发生的武器故障导致火灾和100多人死亡的事件后的遗留安全措施。当然，各种类型的飞机并不是提供给航母的唯一武器。为了保护自己的甲板，该舰配备了许多海麻雀，短程防空和反导弹武器。该舰还配备RAM武器，轻型地对空选项，可以在甲板上移动。更广泛的控制中心当然是舰桥，从那里可以使用双核发动机为这艘巨大的船提供超过30节的速度。你可以想象，在10万吨的时候，它需要相当长的时间才能停止。虽然船舶的核心功能通常是数字控制的，但有一个实际的物理方向盘作为备份。纸质和数字系统都可以用来导航，但触摸屏设置据说几乎可以自动驾驶。事实上，与以前的船只相比，这些变化是如此之大，以至于在测试的早期，福特号的船员报告说，他们基本上是在制定如何在工作时航行的指导方针。携带的口号“诚信掌舵”，杰拉尔德R福特自然具有大量的军事硬件，但该船也旨在提供一个适度的舒适水平，为成千上万的人谁可能会称之为家的时间较长。然而，福特是一个现代化的载体，所以有性别中立的厕所。虽然船上的大多数人通常是男性，但这意味着整艘船都没有小便池。不过，这种推理不是政治性的，而是实际的。“这是为了给予船舶灵活性，因为没有任何停泊区是专门为一个性别或其他，”行动专家一等Kaylea Motsenbocker告诉海军时报。与其他海军建筑相比，其他现代化改造包括用于手机充电的USB端口，节能灯泡，更少的人进入船舱，大型健身房区域和改进的空调。空间允许不同的睡眠和休息区。谈到改善的空间，一名管制员说：““通常，我们有大约12个家伙互相挣扎，以获得在他们的消防合奏。但在这里，你可以穿好衣服，让别人检查你有足够的空间让其他人进出该地区。区别大了差别很大。“据说，船员们对排队等候食物的时间缩短、与船舶布局有关以及泊位的改善印象深刻。提供带点播电视的平板电视、拳击设施和小教堂。机库地板上的标记显示，它兼作篮球场，这可能会在海上进行一些有趣的比赛。豪华的会议室包括抛光的桌子和仪式旗帜，而船长室是杰拉尔德福特纪念品的家。甚至有一个很好的历史连接总统福特回到船本身。福特的照片挂在飞机的悬挂架上。他不仅是一位总统，而且是一位海军老兵。福特在第二次世界大战期间驻扎在蒙特利号航空母舰上，30年后他成为总统。据说他在一次特别严重的风暴中救了这艘船。福特也被认为是在一场暴风雨中被救下船的，因为他的脚被困在甲板上的排水沟里。因此，福特的雕像在船上的现代船舶功能，排水。不幸的是，由于初期问题，该船尚未完全投入使用。2021年初的一份报告称，该船每181次尝试就面临一次飞机发射失败，远远低于每4，166次的要求。目前还不清楚这些问题将如何解决。最新迹象表明，该船可能在2022年的某个时候部署。总而言之，我们认为这将需要很长一段时间在海上，甚至了解堆叠地板和现代技术，使杰拉尔德福特。这个地方的庞大规模肯定会在工作和娱乐方面提供大量的多样性。我们认为，这本身就很有趣。你会上船吗？还是会被限制在海洋中间这么大的一个区域里？在评论中告诉我们。">航母解说</option>
+            </select> 
+            <input type="text" id="textInput1" name="userText1" style="display:none;" placeholder="输入文本">
+        </div>
+    </div>
+
+
+    <div>
+        <h2>解说音色选择</h2>
+        <select name="userOption100" id="optionSelect100">
+            <!-- 注意：移除了 onmouseover 事件 -->
+            <option value="zh-HK-HiuGaaiNeural">粤港女声</option>
+            <option value="zh-HK-HiuMaanNeural">粤闵女声</option>
+            <option value="zh-HK-WanLungNeural">粤龙男声</option>
+            <option value="zh-CN-XiaoxiaoNeural">晓晓女声</option>
+            <option value="zh-CN-XiaoyiNeural">晓艺女声</option>
+            <option value="zh-CN-YunjianNeural">云剑男声</option>
+            <option value="zh-CN-YunxiNeural">云溪男声</option>
+            <option value="zh-CN-YunxiaNeural">云霞男声</option>
+            <option value="zh-CN-YunyangNeural">云阳男声</option>
+            <option value="zh-CN-liaoning-XiaobeiNeural">辽宁晓贝女声</option>
+            <option value="zh-TW-HsiaoChenNeural">小晨女声</option>
+            <option value="zh-TW-YunJheNeural">云哲男声</option>
+            <option value="zh-TW-HsiaoYuNeural">小宇女声</option>
+            <option value="zh-CN-shaanxi-XiaoniNeural">陕西晓妮女声</option>
+        </select>
+    </div>
+    
+    <button id="playAudioButton">Play Audio</button>
+    <audio id="audioPlayer" src="" controls style="display:none;"></audio>
+    
     <form id="uploadForm">
         <!-- form 标签创建一个表单，用于用户输入。 -->
         <input type="file" name="video" accept="video/*" ><br>
@@ -33,13 +97,103 @@
         <input type="submit" value="上传">
         <!-- 提交按钮，用于提交表单 -->
     </form>
-    
-    <div id="result"></div>
-    <!-- div 标签定义一个区块，用于显示结果 -->
+    <!-- 添加进度条容器 -->
+    <div id="progressBarContainer" style="display:none;">
+        <progress id="fileUploadProgress" value="0" max="100"></progress>
+    </div>    
 
+
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- 引入 jQuery 库 -->
     <script src="../static/script.js"></script>
     <!-- 引入自定义 JavaScript 文件 -->
+
+
+    <script>
+        $(document).ready(function() {
+            // 当文档加载完毕时执行
+
+            // 处理表单提交
+            $('#uploadForm').submit(function(e) {
+                e.preventDefault();  // 阻止表单默认提交行为
+                $('#progressBarContainer').show();  // 显示进度条容器
+
+                var formData = new FormData(this);  // 创建 FormData 对象存储表单数据
+
+                // 发送 AJAX 请求以上传文件
+                $.ajax({
+                    url: '/upload',  // 指定文件上传的服务器端 URL
+                    type: 'POST',
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function(data) {
+                        // 文件上传成功后的回调函数
+                        handleResponse(data);  // 处理服务器响应
+                    },
+                    error: function() {
+                        // 文件上传失败的回调函数
+                        console.log("Error in file upload");
+                    },
+                    xhr: function() {
+                        // 创建一个 XMLHttpRequest 并监听上传进度事件
+                        var xhr = new window.XMLHttpRequest();
+                        xhr.upload.addEventListener("progress", function(evt) {
+                            if (evt.lengthComputable) {
+                                var percentComplete = evt.loaded / evt.total;
+                                $('#fileUploadProgress').val(parseInt(percentComplete * 100));
+                            }
+                        }, false);
+                        return xhr;
+                    }
+                });
+            });
+
+            // 播放音频按钮的点击事件
+            $('#playAudioButton').on('click', function() {
+                var audioPlayer = document.getElementById('audioPlayer');
+                if (audioPlayer.src) {
+                    audioPlayer.play()
+                        .then(() => {
+                            // 音频播放成功
+                        })
+                        .catch(e => {
+                            console.error('Error playing audio:', e);
+                        });
+                }
+            });
+
+            // 下拉菜单鼠标悬停事件监听器
+            $('#optionSelect100').on('mouseover', function(event) {
+                var selectedVoice = $(event.target).val();
+                var audioSrc = '/static/audio/' + selectedVoice + '.mp3';
+                playAudio(audioSrc);  // 播放选择的音色
+            });
+        });
+
+        // 播放音频的函数
+        function playAudio(audioSrc) {
+            var audioPlayer = document.getElementById('audioPlayer');
+            audioPlayer.src = audioSrc;
+            audioPlayer.style.display = 'block';
+            audioPlayer.play();
+        }
+
+        // 处理文件上传响应的函数
+        function handleResponse(data) {
+            if (data.download_url) {
+                var downloadLink = document.createElement('a');
+                downloadLink.href = data.download_url;
+                downloadLink.innerText = '下载 MP3 文件';
+                document.body.appendChild(downloadLink);
+            } else {
+                console.log('没有可下载的文件。');
+            }
+        }
+    </script>
+
+    <div id="result"></div>
+    <!-- div 标签定义一个区块，用于显示结果 -->
 </body>
 </html>
