--- a/static/style.css
+++ b/static/style.css
@@ -48,3 +48,13 @@ input[type="submit"]:hover {
     word-break: break-all;
 }
 
+#progressBarContainer {
+    width: 100%;
+    background-color: #ddd;
+}
+
+#progressBar {
+    width: 0%;
+    height: 20px;
+    background-color: #4CAF50;
+}
