--- a/templates/index.html
+++ b/templates/index.html
@@ -92,8 +92,17 @@
     
     <button id="playAudioButton">Play Audio</button>
     <audio id="audioPlayer" src="" controls style="display:none;"></audio>
+
+
+    <!-- 注册登录 -->
+    <a href="./auth/login">登录</a>
+    <a href="./auth/register">注册</a>
     
+
     <form id="uploadForm">
+        <!-- 添加注册码输入框 -->
+        <label for="registration_key">Registration Key:</label>
+        <input type="text" id="registration_key" name="registration_key"><br>
         <!-- form 标签创建一个表单，用于用户输入。 -->
         <input type="file" name="video" accept="video/*" ><br>
         <!-- 文件上传域，只接受视频文件 -->
