--- a/templates/index.html
+++ b/templates/index.html
@@ -109,10 +109,12 @@
         <input type="submit" value="上传">
         <!-- 提交按钮，用于提交表单 -->
     </form>
-    <!-- 添加进度条容器 -->
+    
     <div id="progressBarContainer" style="display:none;">
         <progress id="fileUploadProgress" value="0" max="100"></progress>
-    </div>    
+        <!-- 上传进度条下方的上传状态 -->
+        <div id="uploadMessage"></div> <!-- Placeholder for the upload message -->
+    </div>
 
 
     
